[package]
name = "redis-queue"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Redis based task queue"
readme = "README.md"
repository = "https://github.com/DoumanAsh/redis-queue"
license = "BSL-1.0"
keywords = ["redis"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
# Enables code with queue processing
# Should be used by application that wants to process items in queue
manager = []

[dependencies.redis]
version = "0.23"
default-features = false
features = ["aio", "connection-manager", "tokio-comp"]

[dependencies.str-buf]
version = "3"
default-features = false

[dependencies.uuid]
version = "1"
default-features = false

[dependencies.tokio]
version = "1"
default-features = false
features = ["time"]

[dependencies.tracing]
version = "0.1"
default-features = false
features = ["attributes"]

[dev-dependencies.uuid]
version = "1"
default-features = false
features = ["v4"]

[dev-dependencies.tokio]
version = "1"
default-features = false
features = ["rt", "rt-multi-thread", "net", "time", "macros", "test-util"]

[dev-dependencies.tracing-subscriber]
version = "0.3"

[[test]]
name = "manager"
required-features = ["manager"]

[package.metadata.docs.rs]
features = ["manager"]
